--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "intervention/image": "^2.5",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
-        "ext-imagick": "*",
+        "ext-imagick": "*"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
