--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,12 @@
     "license": "MIT",
     "require": {
         "php": "~7.2.3",
+        "ext-imagick": "*",
         "ext-mbstring": "*",
         "fideloper/proxy": "^4.0",
         "intervention/image": "^2.5",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0",
-        "ext-imagick": "*"
+        "laravel/tinker": "^1.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
